@@ -22,6 +22,9 @@ Revision history for Perl extension Module::Build.
    out Test::Harness' added nonsensical @INC entries before we call it
    again. [assisted by Ville Skytta, David Golden, & Randy Sims]
 
+ - Killed an infinite loop that would happen in y_n() in interactive
+   mode if the author provided no default value. [Max Maischein]
+
 0.2607 (Bug fix release in 0.26 series)  Sat Dec 18 14:14:09 CST 2004
 
  - Instead of freezing @INC in the 'Build' script to the value it had
